<resources>
    <string name="app_name">Portal do Potter</string>
    <string name="title_activity_main">Portal do Potter</string>
    <string name="lfl_about_name">Luiz Fernando Leite</string>
    <string name="lfl_about_resume">Descrição</string>
    <string name="lfl_about_resume_text">Analista de Suporte com habilidade de resolução de problemas e incidentes de TI. Profissional com foco na satisfação do cliente, orientado a resultados e com forte iniciativa. Possuo grande habilidade para aprender novos processos e ajudar as equipes de Suporte Técnico a atingirem suas metas e manterem o ambiente de TI estável e com qualidade.</string>
    <string name="lfl_about_education">Educação</string>
    <string name="lfl_about_xp">Experiência</string>
    <string name="lfl_about_webDev">Desenvolvedor Web</string>
    <string name="lfl_about_webDevDesc">Como freelancer atuei como desenvolvedor web para acorretora de criptomoedas Bullgain Exchange, construíndo o website da empresa utilizando Html, Css e JavaScript.</string>
    <string name="lfl_about_suppIT">Analista de Suporte</string>
    <string name="lfl_about_suppITDesc">Atuei no suporte técnico para pequenos clientes, gerenciando as estações de trabalho Windows 7 e 10, sistemas de wifi e gerenciamento da rede. Realizei a instalação e configuração de computadores e periféricos, assim como do pacote Office.</string>
    <string name="lfl_about_curiosities">Curiosidades</string>
    <string name="lfl_about_curiositiesDesc1">No ano de 2018 lancei um álbum com minha banda chamada Vulgo Esperto. Com uma proposta despretenciosa, nosso estilo se encontra entre uma pegada punk skate rock e rap. Ouça abaixo alguns trechos de algumas músicas.</string>
    <string name="lfl_about_curiositiesDesc2">Caso queira ouvir o álbum completo, ele encontra-se disponível em todas as plataformas digitais de distribuição, ouça em: https://open.spotify.com/album/7yuvU4s00JcxtGTVCaRtA0?si=Yx4W7s1TT-WCUNaQ660lgw&amp;utm_source=copy-link </string>
    <string name="lfl_about_hobbies">Hobbies</string>
    <string name="lfl_about_hobbiesDesc">Há várias coisas que gosto de fazer, como jogar alguns jogos, ouvir um audiobook, assistir animes, filmes e séries. Mas, sem dúvidas, tocar minhas músicas preferidas é meu maior hobbie. Seja violão ou guitarra, todo dia estou tocando alguma coisa no meu tempo livre. </string>
    <string name="fln_about_name">Fabio Lucas</string>
    <string name="fln_about_email">fabiolucs19@gmail.com</string>
    <string name="fln_about_call">(81) 98582-1623</string>
    <string name="fln_about_resume">Objetivo</string>
    <string name="fln_about_resume_text">Minha carreira está no início, mas estou em busca de uma oportunidade para demonstrar meu talento e minhas habilidades. Com as experiências adquiridas ao longo dos meus estágios,  procuro agora uma chance de efetivação na minha área de conhecimento.</string>
    <string name="fln_about_academic_title">Formação Acadêmica</string>
    <string name="fln_about_academic_content">Em andamento - Ciência da Computação - 5° período.
        Universidade Católica de Pernambuco -UNICAP</string>
    <string name="fln_about_qualifications">Cursos e Qualificações</string>
    <string name="fln_about_qualifications_content">
        Montagem e Manutenção de Computadores - SENAI PE
        Técnico em Eletrônica - Instituto Federal de Pernambuco
        BootCamp Java: Programação orientada a objetos - Plataforma DIO
        Intermediate English - Duolingo Level Test
    </string>
    <string name="fln_about_hobbies">Hobbies</string>
    <string name="fln_about_hobbies_content">No meu tempo livre , gosto de jogar videogame e assistir animes. Meu jogo favorito é a franquia God of War e meu anime favorito é Shingeki no Kyokin. Também gosto de passar meu tempo livre com minha família viajando , minha viagem mais recente foi para Porto de Galinhas , um belo lugar.</string>
    <string name="xxx_about_xxx">Sou estudante de Ciência da computação, UNICAP, atualmente cursando o 5° período. Também estagio com Redes de computadores e Segurança. Nas horas livres gosto de assistir vídeos no Youtube e ir para a academia.</string>
    <string name="title_character_1">Harry Potter</string>
    <string name="descr_character_1">Casa: Grifinória\nData de nascimento: 31/07/1980</string>
    <string name="title_character_2">Hermione Granger</string>
    <string name="descr_character_2">Casa: Grifinória\nData de nascimento: 19/09/1979</string>
    <string name="title_character_3">Ron Weasley</string>
    <string name="descr_character_3">Casa: Grifinória\nData de nascimento: 01/03/1980</string>
    <string name="title_character_4">Rubeus Hagrid</string>
    <string name="descr_character_4">Casa: Grifinória\nData de nascimento: 06/12/1928</string>
    <string name="title_character_5">Draco Malfoy</string>
    <string name="descr_character_5">Casa: Sonserina\nData de nascimento: 05/06/1980</string>
    <string name="title_character_6">Lucius Malfoy</string>
    <string name="descr_character_6">Casa: Sonserina\nData de nascimento: 09/09/1954</string>
    <string name="title_character_7">Bellatrix Lestrange</string>
    <string name="descr_character_7">Casa: Sonserina\nData de nascimento: 05/04/1951</string>
    <string name="title_character_8">Arthur Weasley</string>
    <string name="descr_character_8">Casa: Grifinória\nData de nascimento: 06/02/1950</string>
    <string name="title_character_9">Cedric Diggory</string>
    <string name="descr_character_9">Casa: Lufa-Lufa\nData de nascimento: 01/10/1977</string>
    <string name="title_character_10">Ginny Weasley</string>
    <string name="descr_character_10">Casa: Grifinória\nData de nascimento: 11/08/1981</string>
    <string name="title_character_11">Cho Chang</string>
    <string name="descr_character_11">Casa: Corvinal\nData de nascimento: 01/01/1979</string>
    <string name="title_character_12">Neville Longbottom</string>
    <string name="descr_character_12">Casa: Grifinória\nData de nascimento: 30/07/1980</string>
    <string name="title_character_13">Minerva McGonagall</string>
    <string name="descr_character_13">Casa: Grifinória\nData de nascimento: 04/10/1925</string>
    <string name="title_character_14">Luna Lovegood</string>
    <string name="descr_character_14">Casa: Corvinal\nData de nascimento: 13/02/1981</string>
    <string name="title_character_15">Remus Lupin</string>
    <string name="descr_character_15">Casa: Grifinória\nData de nascimento: 10/03/1960</string>
    <string name="title_character_16">Severus Snape</string>
    <string name="descr_character_16">Casa: Sonserina\nData de nascimento: 09/01/1960</string>
    <string name="title_home">Inicio</string>
    <string name="title_characters">Personagens</string>
    <string name="title_spells">Magias</string>
    <string name="title_about">Sobre</string>
    <string name="title_spell_1">Wingardium Leviosa</string>
    <string name="descr_spell_1">Faz um objeto levitar. Mas lembre-se do que Hermione disse: É Levi-o-sa e não Levio-sá</string>
    <string name="title_spell_2">Alohomora</string>
    <string name="descr_spell_2">Desbloqueia objetos como portas, baús, fechaduras em geral.</string>
    <string name="title_spell_3">Petrificus Totalus</string>
    <string name="descr_spell_3">Congela ou petrifica temporariamente o corpo do alvo.</string>
    <string name="title_spell_4">Finite Incantatem</string>
    <string name="descr_spell_4">Um contra-feitiço geral que é usado para reverter ou anular encantos já lançados.</string>
    <string name="title_spell_5">Revelio</string>
    <string name="title_home_1">Bem-vindo ao portal do Potter</string>
    <string name="title_home_2">O Portal do Potter é um aplicativo que reúne informações do universo de Harry Potter, aqui você vai encontrar informações sobre os livros da saga, personagens e alguns feitiços. </string>
    <string name="title_home_3">Livros da saga</string>
    <string name="title_book_1">Harry Potter e a Pedra Filosofal</string>
    <string name="title_book_2">Harry Potter e a Câmera Secreta</string>
    <string name="title_book_3">Harry Potter e o Prisioneiro de Askaban</string>
    <string name="title_book_4">Harry Potter e o Cálice de Fogo</string>
    <string name="title_book_5">Harry Potter e a Ordem da Fênix</string>
    <string name="title_book_6">Harry Potter e o Enigma do Príncipe</string>
    <string name="title_book_7">Harry Potter e as Relíquias da Morte</string>
    <string name="descr_book_1">Harry Potter é um garoto órfão que vive infeliz com seus tios, os Dursleys. Ele recebe uma carta contendo um convite para ingressar em Hogwarts, uma famosa escola especializada em formar jovens bruxos. Inicialmente, Harry é impedido de ler a carta por seu tio, mas logo recebe a visita de Hagrid, o guarda-caça de Hogwarts, que chega para levá-lo até a escola. Harry adentra um mundo mágico que jamais imaginara, vivendo diversas aventuras com seus novos amigos, Rony Weasley e Hermione Granger."</string>
    <string name="descr_book_2">Após as sofríveis férias na casa dos tios, Harry Potter se prepara para voltar a Hogwarts e começar seu segundo ano na escola de bruxos. Na véspera do início das aulas, a estranha criatura Dobby aparece em seu quarto e o avisa de que voltar é um erro e que algo muito ruim pode acontecer se Harry insistir em continuar os estudos de bruxaria. O garoto, no entanto, está disposto a correr o risco e se livrar do lar problemático."</string>
    <string name="descr_book_3">É o início do terceiro ano na escola de bruxaria Hogwarts. Harry, Ron e Hermione têm muito o que aprender. Mas uma ameaça ronda a escola e ela se chama Sirius Black. Após doze anos encarcerado na prisão de Azkaban, ele consegue escapar e volta para vingar seu mestre, Lord Voldemort. Para piorar, os Dementores, guardas supostamente enviados para proteger Hogwarts e seguir os passos de Black, parecem ser ameaças ainda mais perigosas."</string>
    <string name="descr_book_4">Harry retorna para seu quarto ano na Escola de Magia e Bruxaria de Hogwarts, junto com os seus amigos Ron e Hermione. Desta vez, acontece um torneio entre as três maiores escola de magia, com um participante selecionado de cada escola, pelo Cálice de Fogo. O nome de Harry aparece, mesmo não tendo se inscrito, e ele precisa competir."</string>
    <string name="descr_book_5">Após um verão desastroso, Harry volta para o seu quinto ano em Hogwarts, um dos mais difíceis que terá de encarar. Pouquíssimos alunos e pais acreditam nele ou em Dumbledore sobre a volta de Voldemort, e uma série interminável de artigos circula dizendo que eles estão completamente malucos. Ainda por cima, Dolores Umbridge, a nova professora de Defesa Contra as Artes das Trevas, prova ser a pessoa mais repugnante que Harry já conheceu."</string>
    <string name="descr_book_6">No sexto ano de Harry em Hogwarts, Lord Voldemort e seus Comensais da Morte estão criando o terror nos mundos bruxo e trouxa. Dumbledore convence seu velho amigo Horácio Slughorn para retornar a Hogwarts como professor de poções após Harry encontrar um estranho livro escolar. Draco Malfoy se esforça para realizar uma ação destinada por Voldemort, enquanto Dumbledore e Harry secretamente trabalham juntos a fim de descobrir o método para destruir o Lorde das Trevas uma vez por todas."</string>
    <string name="descr_book_7">Sem a orientação e proteção de seus professores, Harry, Rony e Hermione iniciam uma missão para destruir as horcruxes, que são as fontes da imortalidade de Voldemort. Embora devam confiar um no outro mais do que nunca, forças das trevas ameaçam separá-los. Os Comensais da Morte de Voldemort tomaram o controle do Ministério da Magia e de Hogwarts, e eles estão procurando por Harry enquanto ele e seus amigos se preparam para o confronto final."</string>
</resources>